--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <p>Seed Phrase</p>
     <input id="phrase" type="text" />
-    <button id="button">Extract Public and Secret Key</button>
+    <button id="button">Recover Public and Secret Key</button>
     <p>PublicKey</p>
     <input id="publicKey" type="text" />
     <p>SecretKey</p>
