--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   </head>  
   <body>
     <h1>Tool to get keys from seed phrase</h1>
+    <p>DISCLAIMER: This tool and source code are public, hosted by Github and NOT malicious. We are not responsible if Github pages has a vulnerability where malicious code is injected into the page or you are using a malicious browser or extension.</p>
 
-    <p>Seed Phrase</p>
+    <p>Seed Phrase or Recovery Link</p>
     <input id="phrase" type="text" />
     <button id="button">Recover Public and Secret Key</button>
     <p>PublicKey</p>
