add random button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>  
   <body>
     <h1>Tool to get keys from seed phrase</h1>
-    <p>DISCLAIMER: This tool and source code are public, hosted by Github and NOT malicious. We are not responsible if Github pages has a vulnerability where malicious code is injected into the page or you are using a malicious browser or extension.</p>
+    <p>DISCLAIMER: This tool and source code are public, hosted by Github and NOT malicious.</p>
+	<p>We are not responsible if Github pages has a vulnerability where malicious code is injected into the page or you are using a malicious browser or extension.</p>
 
     <p>Seed Phrase or Recovery Link</p>
     <input id="phrase" type="text" />
@@ -25,5 +26,10 @@
     <p>SecretKey</p>
     <input id="secretKey" type="password" />
     <button id="reveal">Show Secret Key</button>
+
+	<br />
+	<br />
+	<p>Click this button to fill in the above fields with a new randomly generated key pair.</p>
+    <button id="random">Generate Random Keys Above</button>
   </body>
 </html>
